--- a/INSTALL
+++ b/INSTALL
@@ -1,10 +1,12 @@
 
-CL-SMTP works in ACL, SBCL, CMUCL, OPENMCL, LISPWORKS and CLISP.
+CL-SMTP works in all implementations supported by its dependencies.
 
-For SBCL you need sb-bsd-sockets.
+For all implementations you'll need usocket
+and cl-base64 (the latter isn't a requirement on ACL).
 
 CL-SMTP has a asdf system definition file.
-load this file:
+
+To load this file:
 
 (asdf:operate 'asdf:load-op 'cl-smtp)
 
