--- a/README
+++ b/README
@@ -1,12 +1,12 @@
 
 CL-SMTP is a simple lisp smtp client. 
-It works in ACL, SBCL, CMUCL, OPENMCL, LISPWORKS and CLISP.
+It works in ACL, SBCL, CMUCL, OPENMCL, LISPWORKS, CLISP and ECL.
 
 new with support for send attachments, thanks Brian Sorg for the implementation
 
 with authentication support for PLAIN and LOGIN authentication method
 
-used CL-BASE64 package
+used cl-base64 and usocket packages (cl-base64 isn't a requirement on ACL)
 
 See INSTALL for prerequisites and build details.
 
