--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+Version 20071113.1
+2007.11.13
+Add SSL support, thank Timothy Ritchey for the suggestions.
+New boolean keyword argument ssl added to send-email.
+Change cl-smtp.lisp, cl-smtp.asd, README, CHANGELOG
+
 Version 20071104.1
 2007.11.04 
 Fixed bug with the file attachments to solve corrupted files when
@@ -5,7 +11,7 @@ processed with chunking turned on. (Brian Sorg)
 Added automatically including mime types for attachesments 
 of common known extensions. (Brian Sorg)
 Added Html-messages option to send-mail function. (Brian Sorg)
-Change attachments.lisp, cl-smtp.asd, cl-smtp.lisp, README, CHANGLOG
+Change attachments.lisp, cl-smtp.asd, cl-smtp.lisp, README, CHANGELOG
 Add mime-type.lisp
 
 Version 20071018.1
